--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,8 +160,10 @@ div#foot{
 	height: 350px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 700px) {
   img {
     width: 100%;
+    display: block;
+    align-content: center;
   }
 }
