--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,6 +163,7 @@ div#foot{
 @media only screen and (max-width: 700px) {
   img {
     width: 100%;
+    max-width: 100%;
     align-content: center;
   }
 }
