--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,7 +178,7 @@ div#foot{
 
 
 @media only screen and (max-width: 768px) {
-  img {
+  [class*="my-"]{
     width: 100%;
     max-width: 100%;
     align-content: center;
