--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ ul li{
 	text-align: left;
 	background-color: #0F292F ;
 	font-family: 'Indie Flower',cursive;
-	list-style-type: disc;
+	list-style-type: none;
 
 }
 
